unpackaged/main/default/objects/project_cloud__Stakeholder_Responsibility__c/project_cloud__Stakeholder_Responsibility__c.object-meta.xml
<CustomObject>
    <label>Stakeholder Responsibility</label>
    <nameField>
        <displayFormat>SR-{00000000}</displayFormat>
        <label>Stakeholder Responsibility Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stakeholder Responsibilities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>