unpackaged/main/default/objects/project_cloud__Stakeholder_Responsibility__c/fields/project_cloud__Activity__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Activity__c</fullName>
    <label>Activity</label>
    <referenceTo>project_cloud__Stakeholder_Activity__c</referenceTo>
    <relationshipLabel>Stakeholder Responsibilities</relationshipLabel>
    <relationshipName>Stakeholder_Responsibilities</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>