unpackaged/main/default/objects/project_cloud__Stakeholder_Responsibility__c/fields/project_cloud__Responsibility__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Responsibility__c</fullName>
    <description>This field will allow a Stakeholder to be assigned to multiple responsibilities for an activity.</description>
    <inlineHelpText>RACI is an acronym derived from the four key responsibilities most typically used in Stakeholder management, select one or more from the following for matching Stakeholders &amp; Activities: R = Responsible, A = Accountable, C = Consulted, I = Informed</inlineHelpText>
    <label>Responsibility</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>R</fullName>
            </value>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>I</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>