unpackaged/main/default/objects/project_cloud__Stakeholder_Responsibility__c/fields/project_cloud__Stakeholder__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Stakeholder__c</fullName>
    <label>Stakeholder</label>
    <referenceTo>project_cloud__Stakeholder_Contact__c</referenceTo>
    <relationshipLabel>Stakeholder Responsibilities</relationshipLabel>
    <relationshipName>Stakeholder_Responsibilities</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>